# youtubeChannelsMonitor

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  spec.md
backend/: AGENTS.md  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1f28cfc96f28_add_uploads_playlist_id_and_rapid_.py  793794bae226_add_anomaly_events_table_and_fetchlog_.py  8114b8dc598c_add_user_role.py  a1b2c3d4e5f6_add_crawled_at_to_video_snapshots.py  b1c2d3e4f5a6_add_schedule_hour.py  c2d3e4f5a6b7_fix_schedule_hour_utc_to_taipei.py  d4e5f6a7b8c9_add_fetch_log_payload_fields.py  fdba3a221e8d_initial_schema.py
backend/src/youtube_monitor/: config.py  database.py  main.py
backend/src/youtube_monitor/api/: AGENTS.md  anomalies.py  auth.py  channels.py  misc.py  stats.py  system.py  users.py  videos.py
backend/src/youtube_monitor/auth/: deps.py  security.py
backend/src/youtube_monitor/collector/: AGENTS.md  scheduler.py  utils.py  youtube_client.py
backend/src/youtube_monitor/crud/: anomaly.py  channel.py  misc.py  user.py  video.py
backend/tests/: conftest.py  test_anomaly_api.py  test_anomaly_detector.py  test_auth.py  test_channel_filters.py  test_channels_api.py  test_collector_channel_snapshot.py  test_collector_discover_videos.py  test_collector_video_snapshot.py  test_database.py  test_fetchlog_filter.py  test_misc_api.py  test_models.py  test_rbac_deps.py  test_scheduler.py  test_stats_api.py  test_system_api.py  test_users_api.py  test_video_filters.py  test_videos_api.py  test_youtube_client.py
(+92 files in other folders)
